Thu Oct  7 13:03:00 1999  Brian Gough  <bjg@network-theory.co.uk>

	* make_rep.c: more careful conversion from unsigned to signed integer
 	for sign attribute to prevent warnings

Sat Aug 21 01:05:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
 
    * fp-aix.c: added, based on fp-solaris.
 
Fri Aug 20 12:17:53 1999  Brian Gough  <bjg@network-theory.co.uk>

	* fp-tru64.c (gsl_ieee_set_mode): note that INEXACT is not easily
 	supported on Tru64, and give an error if anyone tries to use it

Wed Aug 18 21:36:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
 
    * fp-irix.c: added, based on fp-solaris.  IRIX 6 has a rounding and
    exception interface that is identical to Solaris, right down to the enums.

Tue Aug 17 18:36:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
 
    * fp-tru64.c: added, based on solaris and HP-UX fp-* files.
  	Rounding mode and trap control requires that the compiler be
 	passed special options, see the comments in fp-tru64.c.
 
Fri Jul 23 19:00:51 1999  Brian Gough  <bjg@network-theory.co.uk>

	* print.c: added fprintf versions of the printf functions

Sat May  8 20:39:28 1999  Brian Gough  <bjg@network-theory.co.uk>

	* fp-linux.c (gsl_ieee_set_mode): changed from using the function
 	__fput_setcw() to the macro _FPU_SETCW() since Khimenko Victor
 	<khim@sch57.msk.ru> reports that __setfpucw() is not in the shared
 	lib version of glibc-2.1.1

Fri Apr  2 20:52:59 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* endian.c (setup_dynamic_endianness): removed useless test,
 	u.c[i]<0 for unsigned

Fri Aug 21 15:36:22 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* fp-unknown.c (gsl_ieee_set_mode): made return type int, as it
 	should be

Mon Jun 15 22:02:00 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* renamed read-mode-string.c to read.c and print-ieee.c to print.c

Tue Jun  2 19:29:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_ieee_utils.h: renamed GSL_IEEE_CATCH_INEXACT to
 	GSL_IEEE_TRAP_INEXACT, which is a better name
