@@ -30,6 +30,7 @@
 #endif
 
 /* Define one of these if you have a known IEEE arithmetic interface */
+#undef HAVE_SPARCLINUX_IEEE_INTERFACE
 #undef HAVE_LINUX_IEEE_INTERFACE
 #undef HAVE_SUNOS4_IEEE_INTERFACE
 #undef HAVE_SOLARIS_IEEE_INTERFACE
