@@ -146,6 +146,10 @@ esac
 
 AC_MSG_CHECKING(for IEEE arithmetic interface type)
 case "$host" in
+    sparc-*-linux*) 
+	AC_DEFINE(HAVE_SPARCLINUX_IEEE_INTERFACE)
+	AC_MSG_RESULT([sparclinux]) 
+        ;;
     *-*-linux*) 
 	AC_DEFINE(HAVE_LINUX_IEEE_INTERFACE)
 	AC_MSG_RESULT([linux]) 
@@ -211,4 +215,4 @@ else
 fi
 
 dnl
-AC_OUTPUT(gsl-config err/Makefile sys/Makefile utils/Makefile min/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile statistics/Makefile sum/Makefile roots/Makefile poly/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile Makefile)
+AC_OUTPUT(gsl-config err/Makefile sys/Makefile utils/Makefile min/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile statistics/Makefile sum/Makefile roots/Makefile multiroots/Makefile poly/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile Makefile)
