@@ -7,7 +7,7 @@ libgslieeeutils_a_SOURCES = endian.c print.c standardize.c \
 	env.c fp.c read.c
 
 noinst_HEADERS = fp-hpux.c fp-linux.c fp-sunos4.c fp-solaris.c fp-tru64.c \
-        fp-unknown.c
+        fp-sparclinux.c fp-unknown.c
 
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../err
 
