@@ -1,6 +1,8 @@
 #include <config.h>
 
-#if defined(HAVE_LINUX_IEEE_INTERFACE)
+#if defined(HAVE_SPARCLINUX_IEEE_INTERFACE)
+#include "fp-sparclinux.c"
+#elif defined(HAVE_LINUX_IEEE_INTERFACE)
 #include "fp-linux.c"
 #elif defined(HAVE_HPUX_IEEE_INTERFACE)
 #include "fp-hpux.c"
