@@ -7,7 +7,7 @@ separate memory handling layer (gsl_block).
 
 ** Roots of general polynomials can now be found using gsl_poly_complex_solve
 
-** IEEE modes support on Tru64, AIX and IRIX
+** IEEE modes support on Sparclinux, Tru64, AIX and IRIX
 
 ** We have added the second generation RANLUX generators RANLXS and RANLXD
 
